# wasm-pack-hello-world

./: .gitignore  Cargo.toml  LICENSE  index.js  package-lock.json  package.json  readme.md
src/: lib.rs
