[package]
name = "wasm-pack-hello-world"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"
wasm-bindgen = "0.2.88"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false